# aworld-mcp-servers

./: .gitignore  .pre-commit-config.yaml  Dockerfile  ENHANCEMENT.md  LICENSE  README.md  main.py  mcp-servers.yml  pyproject.toml  requirements.txt
browser-use/: pyproject.toml
browser-use/browser_use/: cli.py  logging_config.py
browser-use/browser_use/agent/: prompts.py  service.py  system_prompt_vision.md  views.py
browser-use/browser_use/agent/memory/: service.py
browser-use/browser_use/agent/message_manager/: service.py  utils.py
browser-use/browser_use/browser/: browser.py  context.py  views.py
browser-use/browser_use/controller/: service.py  views.py
browser-use/browser_use/controller/registry/: views.py
browser-use/browser_use/telemetry/: service.py
browser-use/examples/browser/: real_browser.py  test_data_get.ipynb  zg_browser.py
src/: config.py  main.py  main_fastapi.py  metrics.py  server_logging.py
src/browser_use/: __init__.py
src/browser_use/api/: __init__.py  browser.py  browser_fastapi.py  browser_pool.py
src/browser_use/utils/: __init__.py  oss_process.py  trace_processing.py
src/dolphin/: agent.py  runner.py  submit.py
src/dolphin/mcp_collections/: base.py
src/dolphin/mcp_collections/documents/: mscsv.py  msdocx.py  mspptx.py  msxlsx.py  pdf.py  txt.py
src/dolphin/mcp_collections/intelligence/: code.py  playchess.py  think.py
src/dolphin/mcp_collections/media/: audio.py  image.py  video.py
src/dolphin/mcp_collections/tools/: browser.py  download.py  mcparxiv.py  pubchem.py  search.py  terminal.py  wayback.py  wiki.py  yahoofinance.py  youtube.py
src/gaia/: agent.py  runner.py  submit.py  utils.py
src/gaia/mcp_collections/: base.py  unified_server.py
src/gaia/mcp_collections/documents/: mscsv.py  msdocx.py  mspptx.py  msxlsx.py  pdf.py  txt.py
src/gaia/mcp_collections/intelligence/: code.py  playchess.py  think.py
src/gaia/mcp_collections/media/: audio.py  image.py  video.py
src/gaia/mcp_collections/tools/: browser.py  download.py  mcparxiv.py  pubchem.py  search.py  terminal.py  wayback.py  wiki.py  yahoofinance.py  youtube.py
src/openrouter/: __init__.py
src/openrouter/api/: __init__.py  llm.py  llm_fastapi.py
src/openrouter/models/: __init__.py  requests.py  responses.py
src/openrouter/services/: __init__.py  openrouter_service.py
src/rag/: __init__.py  config.yml  reading_agent.py  search_handler.py  search_server.py  utils.py  web_search_agent.py
src/rag/agents/: __init__.py  prompts.py  reading_agent.py  web_search_agent.py
src/rag/api/: __init__.py  health.py  health_fastapi.py  search.py  search_fastapi.py
src/rag/browser/: cookies.py  mdconvert.py  text_web_browser.py
src/rag/core/: __init__.py  logging.py  metrics.py
src/rag/deprecated/: search_server.py  webpage.py
src/rag/models/: __init__.py  requests.py  responses.py  search.py  webpage.py
src/rag/services/: __init__.py  content_fetcher.py  google_search.py  search_handler.py  search_orchestrator.py
src/rag/utils/: __init__.py  text_processing.py
tests/: conftest.py  test_basic.py
